# ICA

./: CMakeLists.txt
ICA-src/include/: BuildModel.hpp
ICA-src/src/: ICA.cpp
cmake/: gcc-options.cmake
cmake/Modules/: FindEnsembleLearning.cmake
